# decayer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  decayer.py  pyproject.toml  tests.py
.github/workflows/: ci.yaml
